--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ minimal_mistakes_skin    : "default" # "air", "aqua", "contrast", "dark", "dirt"
 
 # Site Settings
 locale                   : "en-US"
-title                    : "Data Analytics"
+title                    : "Tyger Guzman Profolio"
 title_separator          : "-"
 name                     : "Tyger Guzman"
 description              : "Professional Profolio."
