--- a/_config.yml
+++ b/_config.yml
@@ -286,12 +286,13 @@ defaults:
       comments: # true
       share: true
       related: true
-#pages
--scope:
-  path: ""
-  type: pages
-values:
-  layout: single
-  author_profile : true
+  # _pages
+  - scope:
+      path: ""
+      type: pages
+    values:
+      layout: single
+      author_profile: true
 
-include: ["_pages"]
+include:
+  ["_pages"]
