--- a/_config.yml
+++ b/_config.yml
@@ -153,6 +153,7 @@ footer:
 include:
   - .htaccess
   - _pages
+  -["_pages"]
 exclude:
   - "*.sublime-project"
   - "*.sublime-workspace"
@@ -293,5 +294,3 @@ defaults:
     values:
       layout: single
       author_profile: true
-
-include: ["_pages"]
