--- a/_config.yml
+++ b/_config.yml
@@ -126,6 +126,9 @@ author:
       icon: "fab fa-fw fa-instagram"
       # url: "https://instagram.com/"
 
+header:
+  image: "/images/BioPic.jpg"
+
 # Site Footer
 footer:
   links:
