--- a/_config.yml
+++ b/_config.yml
@@ -127,7 +127,7 @@ author:
       # url: "https://instagram.com/"
 
 header:
-  image: "/images/BioPic.jpg"
+  image: "https://image.shutterstock.com/z/stock-photo-san-antonio-texas-usa-downtown-skyline-796867324.jpg"
 
 # Site Footer
 footer:
