--- a/_config.yml
+++ b/_config.yml
@@ -126,7 +126,7 @@ author:
       icon: "fab fa-fw fa-instagram"
       # url: "https://instagram.com/"
 
-header:
+head:
   image: "https://image.shutterstock.com/z/stock-photo-san-antonio-texas-usa-downtown-skyline-796867324.jpg"
 
 # Site Footer
