--- a/_config.yml
+++ b/_config.yml
@@ -125,6 +125,9 @@ author:
     - label: "Instagram"
       icon: "fab fa-fw fa-instagram"
       # url: "https://instagram.com/"
+    - label: "LinkdIn"
+      icon: "https://static.licdn.com/sc/h/95o6rrc5ws6mlw6wqzy0xgj7y"
+      url: "https://www.linkedin.com/in/tyger-guzman-a7166490"      
 
 
 # Site Footer
