Update Author Info Order

--- a/_config.yml
+++ b/_config.yml
@@ -111,12 +111,9 @@ author:
     - label: "LinkedIn"
       icon: "fab fa-linkedin"
       url: "https://www.linkedin.com/in/tyger-guzman-a7166490"
-    - label: "Tyger0951@gmail.com"
-      icon: "fas fa-fw fa-envelope-square"
-      url: mailto:Tyger0951@gmail.com
-    - label: "GitHub"
-      icon: "fab fa-fw fa-github"
-      url: "https://github.com/Coder0951"
+#    - label: "GitHub"
+#      icon: "fab fa-fw fa-github"
+#      url: "https://github.com/Coder0951"
 
 # Site Footer
 footer:
