--- a/_config.yml
+++ b/_config.yml
@@ -111,9 +111,9 @@ author:
     - label: "LinkedIn"
       icon: "fab fa-linkedin"
       url: "https://www.linkedin.com/in/tyger-guzman-a7166490"
-#    - label: "GitHub"
-#      icon: "fab fa-fw fa-github"
-#      url: "https://github.com/Coder0951"
+    - label: "GitHub"
+      icon: "fab fa-fw fa-github"
+      url: "https://github.com/Coder0951"
 
 # Site Footer
 footer:
