--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ minimal_mistakes_skin    : "air" # "air", "aqua", "contrast", "dark", "dirt", "n
 
 # Site Settings
 locale                   : "en-US"
-title                    : "Tyger Guzman Profolio"
+title                    : ""
 title_separator          : "-"
 name                     : "Tyger Guzman"
 description              : "Professional Profolio."
@@ -282,12 +282,4 @@ defaults:
       type: pages
     values:
       layout: single
-      author_profile: true
-
-defaults:
-  # splash
-  - scope:
-      path: ""
-      type: splash
-    values:
       author_profile: true
