--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ minimal_mistakes_skin    : "air" # "air", "aqua", "contrast", "dark", "dirt", "n
 
 # Site Settings
 locale                   : "en-US"
-title                    : ""
+title                    : "Tyger Guzman Profolio"
 title_separator          : "-"
 name                     : "Tyger Guzman"
 description              : "Professional Profolio."
