--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "mywebsite",
+  "homepage": "https://coder0951.github.io/MyWebsite",
   "private": true,
   "version": "0.0.0",
   "type": "module",
