Fix GitHub Actions: Change branch from main to master
- Workflow was configured for 'main' branch but repo uses 'master'
- This is why GitHub Pages wasn't building/deploying
- Now workflow will trigger on pushes to master branch

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,9 +2,9 @@ name: Build and Deploy to GitHub Pages
 
 on:
   push:
-    branches: ['main']
+    branches: ['master']
   pull_request:
-    branches: ['main']
+    branches: ['master']
 
 # Allow only one concurrent deployment
 concurrency:
@@ -47,7 +47,7 @@ jobs:
   deploy:
     needs: build
     runs-on: ubuntu-latest
-    if: github.event_name == 'push' && github.ref == 'refs/heads/main'
+    if: github.event_name == 'push' && github.ref == 'refs/heads/master'
     
     environment:
       name: github-pages
